chore: blob20 page title
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/apps/blobbed.xyz/src/layouts/Markdown.astro
+++ b/apps/blobbed.xyz/src/layouts/Markdown.astro
@@ -17,11 +17,12 @@ const { props } = Astro;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
 
-    <Metadata {...{ ...metadata, ...props }} />
+    <!-- <Metadata {...{ ...metadata, ...props }} /> -->
 
     <!-- Uncomment line below to activate View Transitions -->
     <!-- <ViewTransitions fallback="swap" /> -->
 
+    <title>BLOB-20 Specification - Blobbed.xyz</title>
     <ViewTransitions fallback="animate" />
   </head>
 
