chore: pnpm sync
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/apps/blobbed.xyz/src/layouts/Markdown.astro
+++ b/apps/blobbed.xyz/src/layouts/Markdown.astro
@@ -2,12 +2,12 @@
 import '@/styles/globals.css';
 
 import { ViewTransitions } from 'astro:transitions';
-import Metadata from '@/components/Metadata.astro';
+// import Metadata from '@/components/Metadata.astro';
 import { Header } from '@/components/Header';
 
-const metadata = {};
+// const metadata = {};
 
-const { props } = Astro;
+// const { props } = Astro;
 ---
 
 <html lang="en" dir="ltr" class="2xl:text-[20px]">
