chore: markdown styles
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/apps/blobbed.xyz/src/styles/globals.css
+++ b/apps/blobbed.xyz/src/styles/globals.css
@@ -57,6 +57,12 @@
   }
   .prose {
     max-width: 85ch !important;
+    /* @apply leading-7 !important; */
+  }
+
+  .prose li,
+  .prose li p {
+    @apply m-0 p-0;
   }
 }
 
