--- a/apps/blobbed.xyz/src/styles/globals.css
+++ b/apps/blobbed.xyz/src/styles/globals.css
@@ -56,6 +56,7 @@
     @apply bg-background text-foreground;
   }
   .prose {
+    @apply text-justify;
     max-width: 85ch !important;
     /* @apply leading-7 !important; */
   }
