chore: nav links tweaks
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/apps/blobbed.xyz/src/layouts/Layout.astro
+++ b/apps/blobbed.xyz/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '@/styles/globals.css';
 
+import { Toaster } from '@/components/ui/sonner';
 import { ViewTransitions } from 'astro:transitions';
 import Metadata from '@/components/Metadata.astro';
 import { Header } from '@/components/Header';
@@ -57,5 +58,7 @@ const { props } = Astro;
         });
       }
     </script>
+
+    <Toaster />
   </body>
 </html>
