--- a/apps/blobbed.xyz/src/layouts/Markdown.astro
+++ b/apps/blobbed.xyz/src/layouts/Markdown.astro
@@ -3,7 +3,7 @@ import '@/styles/globals.css';
 
 import { ViewTransitions } from 'astro:transitions';
 // import Metadata from '@/components/Metadata.astro';
-import { Header } from '@/components/Header';
+import { Header } from '@/components/Header.tsx';
 
 // const metadata = {};
 
@@ -27,7 +27,7 @@ import { Header } from '@/components/Header';
   </head>
 
   <body>
-    <Header disableToggle client:load />
+    <Header disableToggle active="/blob-20-spec" client:load />
 
     <div class="markdown flex flex-col items-center p-10">
       <div class="prose text-foreground w-full"><div><slot /></div></div>
