--- a/apps/blobbed.xyz/src/pages/api/index.astro
+++ b/apps/blobbed.xyz/src/pages/api/index.astro
@@ -22,6 +22,8 @@ import Layout from '@/layouts/Layout.astro';
   - POST /api/blob20/transfer - transfer tokens
 
   - GET /api/generate-wallet - generated ones are not written anywhere
+
+  // can be used for any ethscriptions, it uses imagemin-webp
   - POST /api/optimize-files - optimize files, using gzip / converting to webp (if image)
     </pre></code
     >
